<resources>
    <string name="app_name">YDemo</string>
    <string name="menu_login">LOGIN</string>
    <string name="menu_device">DEVICE</string>
    <string name="menu_beep">BEEP</string>
    <string name="menu_led">LED</string>
    <string name="menu_print">PRINTER</string>
    <string name="menu_scanner">SCANNER</string>
    <string name="menu_serial_port">SERIAL PORT</string>
    <string name="menu_mag_card">MAG CARD</string>
    <string name="menu_cpu_card">CPU CARD</string>
    <string name="menu_dukpt">DUKPT</string>
    <string name="menu_mksk">MKSK</string>
    <string name="menu_emv">EMV</string>
    <string name="menu_emv_param">EMV PARAM</string>
    <string name="menu_m0_card">M0 CARD</string>
    <string name="menu_rupay">RUPAY</string>
    <string name="menu_psam_card">PSAM CARD</string>
    <string name="menu_ntag_card">NTAG CARD</string>
    <string name="menu_m1_card">M1 CARD</string>
    <string name="menu_sign">SIGNATURE</string>
    <string name="menu_ped">PED</string>
    <string name="menu_print_test">PRINT TEST</string>
    <string name="menu_trans_test">TRANS TEST</string>
    <string name="menu_oct_secure">OCT SECURE</string>
    <string name="menu_sle4442_card">SLE4442</string>
    <string name="menu_felica_card">FELICA</string>
    <string name="menu_emulate_card">EMULATE CARD</string>
    <string name="menu_usb_serial">USB SERIAL</string>
    <string name="menu_TPM">TPM</string>

    <string name="title_login_input_businessId">Input Business Id</string>
    <string name="title_serial_port_input">Please Input Data</string>
    <string name="title_serial_port_name">Please Input Name</string>
    <string name="title_serial_port_receive">Receive Area</string>
    <string name="title_cpu_card_input_timeout">Please Input The Time</string>
    <string name="title_cpu_card_input_data">Please Input The Data</string>
    <string name="title_emv_input_amount">Please Input Amount</string>
    <string name="title_emv_param_aid_manager">AID Manager</string>
    <string name="title_emv_param_capk_manager">CAPK Manager</string>
    <string name="title_emv_param_black_card_manager">Black Card Manager</string>
    <string name="title_emv_param_black_cert_manager">Black Cert Manager</string>
    <string name="title_emv_param_dynamic_limit_manager">Dynamic Limit Manager</string>
    <string name="title_rupay_service_manager">RuPay Service Manager</string>
    <string name="title_rupay_prmacq_key_manager">PRMacqKey Manager</string>
    <string name="title_m1_card_input_selector">Please Input Selector</string>
    <string name="title_m1_card_input_password">Please Input Password</string>
    <string name="title_m1_card_input_data">Please Input Data</string>
    <string name="title_test_input_test_times">Input Test Times</string>
    <string name="title_test_current_count">Current</string>
    <string name="title_test_success_count">Success</string>
    <string name="title_test_fail_count">Fail</string>

    <string name="tip_prompt">Prompt</string>
    <string name="tip_confirm">CONFIRM</string>
    <string name="tip_cancel">CANCEL</string>
    <string name="tip_login_business_id_error">Business id is the length of 8 digits</string>
    <string name="tip_login_success">Login Success</string>
    <string name="tip_login_error">Login Error</string>
    <string name="tip_login">YSDK uses dukpt or mk/sk encryption based on the business id.If need use dukpt, Please set business id with 09000000.If need enable MK/SK, Please set business id with 00000000.If need enable SM4, Please set business id with 01100000.</string>
    <string name="tip_serial_port">Please connect the device to the PC with the data cable, and then click the Open button. Check the corresponding serial port on the computer device manager, and use the serial port tool to communicate with the device</string>
    <string name="tip_please_swipe_card">Please Swipe Card</string>
    <string name="tip_dip_tap_card">Please dip card or tap card...</string>
    <string name="tip_tap_card">Please tap card...</string>
    <string name="tip_signature"> Please sign at below space, then click printing...</string>

    <string name="btn_device_info">DEVICE INFO</string>
    <string name="btn_device_install">INSTALL</string>
    <string name="btn_device_uninstall">UNINSTALL</string>
    <string name="btn_device_choose_file">CHOOSE FILE</string>
    <string name="btn_printer">PRINTER</string>
    <string name="btn_printer_list">PRINTER LIST</string>
    <string name="btn_printer_custom_font">PRINTER CUSTOM_FONT</string>
    <string name="btn_printer_qrcode">PRINTER QRCODE</string>
    <string name="btn_printer_table">PRINTER TABLE</string>
    <string name="btn_printer_html">PRINTER HTML</string>
    <string name="btn_printer_tag1">PRINTER TAG1</string>
    <string name="btn_printer_tag2">PRINTER TAG2</string>
    <string name="btn_printer_set_tag_print">SET PRINTER TAG</string>
    <string name="btn_printer_set_ticket_print">SET PRINT TICKET</string>
    <string name="btn_printer_tag_locate">TAG PAPER LOCATE</string>
    <string name="btn_serial_port_open">OPEN</string>
    <string name="btn_serial_port_close">CLOSE</string>
    <string name="btn_serial_port_send">SEND</string>
    <string name="btn_mag_card_read">READ CARD</string>
    <string name="btn_cpu_card">CPU CARD</string>
    <string name="btn_typea_card_open">TYPEA OPEN</string>
    <string name="btn_typea_card_close">TYPEA CLOSE</string>
    <string name="btn_typea_card_exchange">TYPEA EXCHANGE</string>

    <string name="btn_dukpt_login">LOGIN</string>
    <string name="btn_dukpt_init">DUKPT INIT</string>
    <string name="btn_dukpt_increase_ksn">INCREASE KSN</string>
    <string name="btn_dukpt_current_ksn">CURRENT KSN</string>
    <string name="btn_dukpt_encrypt">ENCRYPT</string>
    <string name="btn_dukpt_decrypt">DECRYPT</string>
    <string name="btn_dukpt_calc_mac">CALC MAC</string>
    <string name="btn_dukpt_key_kcv">KEY KCV</string>
    <string name="btn_dukpt_online_pin">ONLINE PIN</string>
    <string name="btn_dukpt_offline_pin">OFFLINE PIN</string>

    <string name="btn_mksk_login">LOGIN</string>
    <string name="btn_mksk_load_KEK">LOAD KEK KEY</string>
    <string name="btn_mksk_load_master_key">MASTER KEY</string>
    <string name="btn_mksk_load_clear_master_key">CLEAR MASTER KEY</string>
    <string name="btn_mksk_load_work_key">WORK KEY</string>
    <string name="btn_mksk_load_clear_work_key">CLEAR WORK KEY</string>
    <string name="btn_mksk_calc_mac">CALC MAC</string>
    <string name="btn_mksk_delete_key">DELETE KEY</string>
    <string name="btn_mksk_encrypt">ENCRYPT</string>
    <string name="btn_mksk_decrypt">DECRYPT</string>
    <string name="btn_mksk_check_key">CHECK KEY</string>
    <string name="btn_mksk_online_pin">ONLINE PIN</string>
    <string name="btn_pin_block">PIN BLOCK</string>

    <string name="btn_emv_start">EMV START</string>
    <string name="btn_emv_is_card_exist">IS CARD EXIST</string>

    <string name="btn_emv_param_download_aid">DOWNLOAD AID</string>
    <string name="btn_emv_param_get_aid">GET AID</string>
    <string name="btn_emv_param_clear_aid">CLEAR AID</string>
    <string name="btn_emv_param_download_capk">DOWNLOAD CAPK</string>
    <string name="btn_emv_param_get_capk">GET CAPK</string>
    <string name="btn_emv_param_clear_capk">CLEAR CAPK</string>

    <string name="btn_emv_param_download_black_card">DOWNLOAD BLACK CARD</string>
    <string name="btn_emv_param_clear_black_card">CLEAR BLACK CARD</string>
    <string name="btn_emv_param_get_black_card">GET BLACK CARD</string>
    <string name="btn_emv_param_download_black_card_hash">DOWNLOAD BLACK CARD HASH</string>
    <string name="btn_emv_param_clear_black_card_hash">CLEAR BLACK CARD HASH</string>
    <string name="btn_emv_param_get_black_card_hash">GET BLACK CARD HASH</string>
    <string name="btn_emv_param_delete_black_card_hash">DELETE BLACK CARD HASH</string>
    <string name="btn_emv_param_download_black_cert">Download Black Cert</string>
    <string name="btn_emv_param_clear_black_cert">Clear Black Cert</string>
    <string name="btn_emv_param_download_dynamic_limit">Download Dynamic limit</string>
    <string name="btn_emv_param_clear_dynamic_limit">Clear Dynamic Limit</string>
    <string name="btn_rupay_download_service">RuPay Download Service</string>
    <string name="btn_rupay_get_service">RuPay Get Service</string>
    <string name="btn_rupay_clear_service">RuPay Clear Service</string>
    <string name="btn_rupay_download_prmacqkey">Rupay Download PRMacqKey</string>
    <string name="btn_rupay_get_prmacqkey">Get PRMacqKey</string>
    <string name="btn_rupay_clear_prmacqkey">Clear PRMacqKey</string>
    <string name="btn_psam_card">PSAM CARD</string>
    <string name="btn_ntag_card_open">NTAG CARD OPEN</string>
    <string name="btn_ntag_card_close">NTAG CARD CLOSE</string>
    <string name="btn_ntag_card_read">NTAG CARD READ</string>
    <string name="btn_sign_print">PRINT</string>
    <string name="btn_sign_clean">CLEAN</string>

    <string name="btn_ped_login">LOGIN</string>
    <string name="btn_ped_input_pin">INPUT PIN</string>
    <string name="btn_ped_format">FORMAT</string>
    <string name="btn_ped_load_tek">LOAD TEK</string>
    <string name="btn_ped_check_key">CHECK KEY</string>
    <string name="btn_ped_load_master_key">LOAD MASTER KEY</string>
    <string name="btn_ped_load_plain_master_key">LOAD CLEAR MASTER KEY</string>
    <string name="btn_ped_load_work_key">LOAD WORK KEY</string>
    <string name="btn_ped_load_clear_work_key">LOAD CLEAR WORK KEY</string>
    <string name="btn_ped_calc_mac">CALC MAC</string>
    <string name="btn_ped_calc_kcv">CALC KCV</string>
    <string name="btn_ped_des">DES</string>
    <string name="btn_ped_write_rsa_key">WRITE RSA KEY</string>
    <string name="btn_ped_read_rsa_key">READ RSA KEY</string>
    <string name="btn_ped_rsa_decrypt">RSA DECRYPT</string>

    <string name="btn_emulate_card_open">OPEN</string>
    <string name="btn_emulate_card_close">CLOSE</string>
    <string name="btn_emulate_card_config">CONFIG</string>
    <string name="btn_emulate_card_process">PROCESS</string>

    <string name="title_tpm_input">Please Input command</string>

</resources>
