<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_print"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="@dimen/size_text"
            android:text="@string/btn_sign_print" />

        <Button
            android:id="@+id/btn_clean"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="@dimen/size_text"
            android:text="@string/btn_sign_clean" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tip_signature"
        android:textSize="@dimen/size_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.morefun.ysdk.sample.view.PaintView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
